--- a/man1/axis-remote.1
+++ b/man1/axis-remote.1
@@ -23,15 +23,23 @@
 .\"
 .\"
 .\"
-.TH axis-remote "1"  "2007-04-01" "LinuxCNC Documentation" "The Enhanced Machine Controller"
+.TH axis-remote "1"  "2016-04-16" "Machinekit Documentation" 
 .SH NAME
+.TP
+.TP
 axis-remote \- AXIS Remote Interface
 .SH SYNOPSIS
+.TP
+.TP
 .B axis-remote \fIOPTIONS\fR|\fIFILENAME\fR
 .SH DESCRIPTION
+.TP
+.TP
 \fBaxis-remote\fR is a small script that triggers commands in a running AXIS GUI.
 Use \fBaxis-remote --help\fR for further information.
 .SH OPTIONS
+.TP
+.TP
 .TP
 \fB--ping\fR, \fB-p\fR
 Check whether AXIS is running.
@@ -59,19 +67,31 @@ Load the G-code file \fBFILENAME\fR.
 .SH "SEE ALSO"
 \fBaxis(1)\fR
 
-Much more information about LinuxCNC and HAL is available in the LinuxCNC
-and HAL User Manuals, found at /usr/share/doc/linuxcnc/.
+Much more information about Machinekit and HAL is available in the Machinekit
+and HAL User Manuals, found at /usr/share/doc/machinekit/.
 
 .SH HISTORY
-
+.TP
+.TP
+None
+    
 .SH BUGS
+.TP
+.TP
 None known at this time. 
 .PP
+
 .SH AUTHOR
-This man page written by Alex Joni, as part of the LinuxCNC project.
+.TP
+.TP
+This man page written by Alex Joni, as part of the Machinekit project.
+
 .SH REPORTING BUGS
 Report bugs to alex_joni AT users DOT sourceforge DOT net
+
 .SH COPYRIGHT
+.TP
+.TP
 Copyright \(co 2007 Alex Joni.
 .br
 This is free software; see the source for copying conditions.  There is NO
