--- a/man1/axis-remote.1.asciidoc
+++ b/man1/axis-remote.1.asciidoc
@@ -1,23 +1,31 @@
-= axis-remote(9)
+= axis-remote(Extension)
 :manmanual: HAL Components
 :mansource: ../man/man1/axis-remote.1.asciidoc
 :man version : 
 
 
 == NAME
+
+
 axis-remote -- AXIS Remote Interface
 
 
 == SYNOPSIS
+
+
 axis-remote __OPTIONS__|__FILENAME__
 
 
 == DESCRIPTION
+
+
 **axis-remote** is a small script that triggers commands in a running AXIS GUI.
 Use **axis-remote --help** for further information.
 
 
 == OPTIONS
+
+
 
 **--ping**, **-p**
 Check whether AXIS is running.
@@ -47,29 +55,41 @@ Load the G-code file **FILENAME**.
 == SEE ALSO
 **axis(1)**
 
-Much more information about LinuxCNC and HAL is available in the LinuxCNC
-and HAL User Manuals, found at /usr/share/doc/linuxcnc/.
+Much more information about Machinekit and HAL is available in the Machinekit
+and HAL User Manuals, found at /usr/share/doc/machinekit/.
 
 
 
 == HISTORY
 
 
+None
+    
+
 
 == BUGS
+
+
 None known at this time. 
 .PP
 
 
+
 == AUTHOR
-This man page written by Alex Joni, as part of the LinuxCNC project.
+
+
+This man page written by Alex Joni, as part of the Machinekit project.
+
 
 
 == REPORTING BUGS
 Report bugs to alex_joni AT users DOT sourceforge DOT net
 
 
+
 == COPYRIGHT
+
+
 Copyright \(co 2007 Alex Joni.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
