man/man*/*.asciidoc fix manpage type in header

--- a/man1/axis-remote.1.asciidoc
+++ b/man1/axis-remote.1.asciidoc
@@ -1,4 +1,4 @@
-= axis-remote(Extension)
+= axis-remote(1)
 :manmanual: HAL Components
 :mansource: ../man/man1/axis-remote.1.asciidoc
 :man version : 
