--- a/man3/rtapi_region.3rtapi.asciidoc
+++ b/man3/rtapi_region.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= rtapi_region(9)
+= rtapi_region(3rtapi)
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_region.3rtapi.asciidoc
 :man version : 
