--- a/man3/undocumented.3rtapi.asciidoc
+++ b/man3/undocumented.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= undocumented(9)
+= undocumented(3rtapi)
 :manmanual: HAL Components
 :mansource: ../man/man3/undocumented.3rtapi.asciidoc
 :man version : 
