--- a/man3/hm2_allocate_bspi_tram.3hm2.asciidoc
+++ b/man3/hm2_allocate_bspi_tram.3hm2.asciidoc
@@ -1,4 +1,4 @@
-= hm2_allocate_bspi_tram(Extension)
+= hm2_allocate_bspi_tram(3hm2)
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 
