--- a/man3/rtapi_app_exit.3rtapi.asciidoc
+++ b/man3/rtapi_app_exit.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= rtapi_app_exit(9)
+= rtapi_app_exit(3rtapi)
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_app_exit.3rtapi.asciidoc
 :man version : 
