--- a/man3/rtapi_div_u64.3rtapi.asciidoc
+++ b/man3/rtapi_div_u64.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= rtapi_div_u64(9)
+= rtapi_div_u64(3rtapi)
 \" Copyright (C) 2013 Jeff Epler <jepler@unpythonic.net>
 \"
 \" This program is free software; you can redistribute it and/or
