--- a/man3/rtapi_prio.3rtapi.asciidoc
+++ b/man3/rtapi_prio.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= rtapi_prio(9)
+= rtapi_prio(3rtapi)
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_prio.3rtapi.asciidoc
 :man version : 
