--- a/man3/rtapi_task_new.3rtapi.asciidoc
+++ b/man3/rtapi_task_new.3rtapi.asciidoc
@@ -1,4 +1,4 @@
-= rtapi_task_new(9)
+= rtapi_task_new(3rtapi)
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_task_new.3rtapi.asciidoc
 :man version : 
